nexus-collections/tests/ui/cannot_use_detached_after_link.stderr
error[E0382]: use of moved value: `detached`
  --> tests/ui/cannot_use_detached_after_link.rs:16:13
   |
12 |     let detached = test_alloc::create_node(42).unwrap();
   |         -------- move occurs because `detached` has type `DetachedListNode<u64>`, which does not implement the `Copy` trait
13 |     let _slot = list.link_back(detached);
   |                                -------- value moved here
...
16 |     let _ = detached.take();
   |             ^^^^^^^^ value used here after move
